# w3c-agents-features

./: .gitignore  README.md
data/: training_pairs.json
data/commercial_models/: deepseek-r1.txt  gemini2_5.txt  gpt4_1.txt  grok3.txt  grok4.txt  o3.txt  sonnet4.txt  thinking4.txt
data/samples/: .data
features_bench/: README.md  pyproject.toml
features_bench/features_bench/: __init__.py  test_generate_asl.py
features_bench/features_bench/app/: __init__.py  test_parse_logs.py
features_bench/features_bench/core/base/: _00_load.py  _01_parse.py  _02_ast.py
features_bench/features_bench/core/bspl_to_nl/: __init__.py  _context.txt  _prompt.txt  translate_one_shot.py
